@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="plugin.program.launcher"
        name="Launcher"
-       version="1.10.1"
+       version="1.10.2"
        provider-name="JustSomeUser, CinPoU, leo212, Zerqent, zosky">
   <requires>
     <import addon="xbmc.python" version="1.0"/>
@@ -13,6 +13,7 @@
   <extension point="xbmc.addon.metadata">
     <platform>all</platform>
     <summary lang="en">Runs emulators and roms.</summary>
+	<summary lang="ko">프로그램과 에뮬레이터 실행을 위한 애드온</summary>
     <description lang="en">List roms and runs them with an emulator.
 
 Features:
@@ -25,5 +26,6 @@ Limitations:
    -Filenames may not contain any comma ","
    -Search engine no longer working as it seems -> disabled
   </description>
+  <description lang="ko">외부 프로그램을 추가해 사용할수 있고, 에뮬레이터의 롬화일을 보여주고 실행함</description>
   </extension>
 </addon>
