@@ -1,0 +1,51 @@
+<?xml version="1.0" encoding="utf-8" standalone="yes"?>
+<strings>
+    <string id="30000">런처</string>
+
+    <!-- context menu -->
+    <string id="30101">새로운 런처 추가</string>
+    <string id="30102">미리보기 가져오기</string>
+    <string id="30103">대기 상태 전환</string>
+    <string id="30104">제거</string>
+    <string id="30105">경로로부터 파일 추가</string>
+    <string id="30106">수동으로 파일 추가</string>
+    <string id="30107">이름바꾸기</string>
+    <string id="30511">검색</string>
+    <string id="30512">검색 (전체)</string>
+
+    <!-- settings labels -->
+    <string id="30001">미리보기 경로</string>
+    <string id="30002">검색 엔진</string>
+
+    <!-- dialog messages -->
+    <string id="30010">"%s"를 제거하시겠습니까?</string>
+    <string id="30011">파일이 성공적으로 제거되었습니다</string>
+    <string id="30012">런처가 성공적으로 제거되었습니다</string>
+    <string id="30013">경로로 부터 화일을 가져오겠습니까?</string>
+    <string id="30014">%s로부터 화일을 가져오는중...</string>
+    <string id="30015">%s 파일이 성공적으로 추가되었습니다</string>
+    <string id="30016">%s 파일이 성공적으로 추가되었고, %s 스킵</string>
+    <string id="30017">파일 선택</string>
+    <string id="30018">파일 이름 설정</string>
+    <string id="30019">파일이 성공적으로 추가되었습니다</string>
+    <string id="30020">런처 종류</string>
+    <string id="30021">독립형 (일반 PC 실행화일)</string>
+    <string id="30022">파일 런처 (예, 게임 에뮬레이터)</string>
+    <string id="30023">런처 응용프로그램을 선택하세요</string>
+    <string id="30024">응용프로그램 실행옵션</string>
+    <string id="30025">런처의 이름 설정</string>
+    <string id="30026">런처가 성공적으로 만들어졌습니다</string>
+    <string id="30027">파일 경로 선택</string>
+    <string id="30028">화일 확장자 설정, &quot;|&quot; 로 분리해서 넣으세요. (예, iso|bin)</string>
+    <string id="30029">프로그램 대기가 지금 활성화 되었습니다</string>
+    <string id="30030">프로그램 대기가 지금 비활성화 되었습니다</string>
+    <string id="30031">검색중 "%s %s" in %s...</string>
+    <string id="30032">저장중...</string>
+    <string id="30033">다운로드중: %s</string>
+    <string id="30050">이 디렉토리로 다시 들어가 변경사항 보기</string>
+    <string id="30034">미리보기가 없음. 검색할 다름 이름을 넣으세요</string>    
+    <string id="30035">파일이름이 변경되었습니다</string>
+    <string id="30501">없어진 항목을 확인중 in %s...</string>
+    <string id="30502">%s 항목들이 성공적으로 제거되었습니다</string>
+
+</strings>
